[gd_scene load_steps=9 format=3 uid="uid://bh4hum6xfvdwj"]

[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="1_ewn0b"]
[ext_resource type="Texture2D" uid="uid://ixih0iowqh64" path="res://Graphics/Players/Martial Hero 2/Sprites/Run.png" id="2_u2pem"]
[ext_resource type="PackedScene" uid="uid://7tly8n6lhlck" path="res://Scenes/Utility/hurt_box.tscn" id="3_86y4h"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_riuhg"]
radius = 7.0
height = 44.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vslxu"]
size = Vector2(11, 22.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_ei4vs"]
radius = 470.038

[sub_resource type="CircleShape2D" id="CircleShape2D_3reaq"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_sas3k"]

[node name="Player" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_ewn0b")

[node name="PlayerImage" type="Sprite2D" parent="."]
texture = ExtResource("2_u2pem")
hframes = 8
region_rect = Rect2(80.1396, 70.5833, 38.2762, 60.8295)

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2(6, 2)
shape = SubResource("CapsuleShape2D_riuhg")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.585, 1.585)

[node name="walkTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="HurtBox" parent="." instance=ExtResource("3_86y4h")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(6.5, 1.25)
shape = SubResource("RectangleShape2D_vslxu")

[node name="Attack" type="Node2D" parent="."]

[node name="IceSpearTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 1.5

[node name="IceSpearAttackTimer" type="Timer" parent="Attack/IceSpearTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="TornadoTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 3.0

[node name="TornadoAttackTimer" type="Timer" parent="Attack/TornadoTimer"]
unique_name_in_owner = true
wait_time = 0.2

[node name="JavelinBase" type="Node2D" parent="Attack"]

[node name="EnemyDetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_ei4vs")

[node name="GrabArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
shape = SubResource("CircleShape2D_3reaq")

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
position = Vector2(3, 2)
shape = SubResource("CircleShape2D_sas3k")

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="Attack/IceSpearTimer" to="." method="_on_ice_spear_timer_timeout"]
[connection signal="timeout" from="Attack/IceSpearTimer/IceSpearAttackTimer" to="." method="_on_ice_spear_attack_timer_timeout"]
[connection signal="timeout" from="Attack/TornadoTimer" to="." method="_on_tornado_timer_timeout"]
[connection signal="timeout" from="Attack/TornadoTimer/TornadoAttackTimer" to="." method="_on_tornado_attack_timer_timeout"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]
[connection signal="area_entered" from="GrabArea" to="." method="_on_grab_area_area_entered"]
[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]

[editable path="HurtBox"]
